[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pnsgraph"
version = "0.0.2"
authors = [
  { name="John Frederick Tapia", email="john.frederick.tapia@dlsu.edu.ph" },
]
description = "Python Implementation of P-graph Algorithms for Process Network Synthesis"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/fredtapia/PNS-Graph"